--- a/hombres.html
+++ b/hombres.html
@@ -21,8 +21,10 @@
                 <span class="logo-text">GYM VITAL</span>
             </div>
             <ul class="nav-links">
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#rutinas">Rutinas</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="rutinashombre.html">Rutinas Hombre</a></li>
+                <li><a href="rutinasmujer.html">Rutinas Mujeres</a></li>
+                <li><a href="rutinashiit.html">Rutinas HIIT</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#maquinas">Maquinas</a></li>
                 <li><a href="#contacto">Contacto</a></li>
@@ -72,7 +74,7 @@
                 <h3>inicial - 5 dias</h3>
                 <p>Entrenamiento básico de lunes a viernes para progresar más rápido manteniendo una intensidad baja y
                     controlada.</p>
-
+                <a href="inicial5diashombre.html" class="btn btn-secondary">Ver rutina</a>
             </div>
 
             <div class="program-card">
@@ -81,6 +83,7 @@
                 <h3>intermedio - 3 dias</h3>
                 <p>Una rutina más intensa y variada para quienes ya dominan la técnica y buscan mejorar fuerza y
                     composición corporal.</p>
+                <a href="intermedio3diashombre.html" class="btn btn-secondary">Ver rutina</a>
             </div>
 
             <div class="program-card">
@@ -89,6 +92,7 @@
                 <h3>intermedio - 5 dias</h3>
                 <p>Un plan completo orientado a mejorar definición, fuerza y volumen muscular mediante un trabajo más
                     específico.</p>
+                <a href="intermedio5diashombre.html" class="btn btn-secondary">Ver rutina</a>
             </div>
 
             <div class="program-card">
@@ -97,6 +101,7 @@
                 <h3>avanzado - 3 dias</h3>
                 <p>Un plan exigente concentrado en tres sesiones potentes, ideal para ganar fuerza y mantener masa
                     muscular con poco tiempo disponible.</p>
+                <a href="avanzado3diashombre.html" class="btn btn-secondary">Ver rutina</a>
             </div>
 
             <div class="program-card">
@@ -105,6 +110,7 @@
                 <h3>avanzado - 5 dias</h3>
                 <p>Plan de alto rendimiento para quienes buscan maximizar hipertrofia, fuerza y definición con
                     entrenamientos exigentes y estratégicos.</p>
+                <a href="avanzado5diashombre.html" class="btn btn-secondary">Ver rutina</a>
             </div>
 
         </div>
