--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
                 <span class="logo-text">GYM VITAL</span>
             </div>
             <ul class="nav-links">
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#rutinas">Rutinas</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="hombres.html">Rutinas Hombre</a></li>
+                <li><a href="rutinasmujer.html">Rutinas Mujeres</a></li>
+                <li><a href="rutinashiit.html">Rutinas HIIT</a></li>
                 <li><a href="#servicios">Servicios</a></li>
                 <li><a href="#maquinas">Maquinas</a></li>
                 <li><a href="#contacto">Contacto</a></li>
